data/derived/sp14/progs/unify/prog0091.ml.out
Characters 385-400:
  | Cube a -> (eval (a,x,y) ) * (eval  (a,x,y) ) * (eval (a,x,y) );;
              ^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
